using UnityEngine;

namespace My2D
{
    //애니메이션 파라미터 이름을 관리하는 클래스
    public class AnimationString
    {
        public static string IsMove = "IsMove";
        public static string IsRun = "IsRun";
        public static string IsGround = "IsGround";
        public static string IsCeiling = "IsCeiling";
        public static string IsWall = "IsWall";
        public static string IsDeath = "IsDeath";
        public static string HasTarget = "HasTarget";
        public static string JumpTrigger = "JumpTrigger";
        public static string AttackTrigger = "AttackTrigger";
        public static string HitTrigger = "HitTrigger";
        public static string BowTrigger = "BowTrigger";
        public static string YVelocity = "YVelocity";
        public static string CanMove = "CanMove";
        public static string LockVelocity = "LockVelocity";

    }
}
